# np-vmd

./: README.md  pyproject.toml
.github/workflows/: docs.yml
docs/source/: conf.py  history_todo.rst  index.rst  installation.rst  introduction.rst
docs/source/api_reference/: 2dof_api_reference.rst  index.rst  sdof_api_reference.rst
docs/source/tutorials_and_examples/: 2dof_system_forced_response.rst  2dof_systems.rst  index.rst  mdof_laplace.rst  sdof_systems.rst
examples/: SE_47456.py  example_comparison_free.py  inman_4_2_6_old.py  inman_4_5_1_old.py  inman_4_6_1_new.py  inman_4_6_1_old.py  rao_mass_spring.py  rao_mass_spring_fig5_5.py  tdof_mck_forced_Response.py
src/np_vmd/: laplace_mdof.py  misc.py  sdof_funcs.py  tdof_MCK.py  tdof_odeint.py  tdof_response_inman.py
src/np_vmd/ode/: SolverFactory.py  TimeFactory.py
src/np_vmd/sho_class/: SHO_sdof_class.py  example_sho.py  sdof_sympy.py
tests/: test_mdof_system.py  test_misc.py  test_sdof_funcs.py  test_sdof_system.py  test_sdof_system_response.py  test_tdof_MCK.py  test_tdof_forced_gagnon.py  test_tdof_forced_inman.py  test_tdof_free_response_class.py  test_tdof_system.py
